adding new js and css files and new divs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <title>Grunt 101</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+	
+	<link rel="stylesheet" type="text/css" href="dist/css/all.min.css">
+	<!--<link rel="stylesheet" type="text/css" href="dist/css/red.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/blue.css">-->
+	
   </head>
   <body>
 	<h1>Grunt 101</h1>
+	<div class="square-div red"></div>
+	<div class="square-div blue"></div>
+	
+	<!-- js files -->
+		<script src="src/js/1.js"></script>
+		<script src="src/js/2.js"></script>
+	
+	<!-- js files -->
   </body>
 </html>
