only using all.min.js and style.min.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 	
-	<link rel="stylesheet" type="text/css" href="dist/css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/style.min.css">
 	<!--<link rel="stylesheet" type="text/css" href="dist/css/red.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/blue.css">-->
 	
@@ -17,8 +17,9 @@
 	<div class="square-div blue"></div>
 	
 	<!-- js files -->
-		<script src="src/js/1.js"></script>
-		<script src="src/js/2.js"></script>
+		<!--<script src="src/js/1.js"></script>
+		<script src="src/js/2.js"></script>-->
+		<script src="dist/js/all.min.js"></script>
 	
 	<!-- js files -->
   </body>
