including css files from src/css folder

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width">
 	
 		<!-- build:css css/style.min.css -->
-		<link rel="stylesheet" type="text/css" href="dist/css/red.css">
-		<link rel="stylesheet" type="text/css" href="dist/css/blue.css">
+		<link rel="stylesheet" type="text/css" href="src/css/common.css">
+		<link rel="stylesheet" type="text/css" href="src/css/red.css">
+		<link rel="stylesheet" type="text/css" href="src/css/blue.css">
 		<!-- /build -->
 	
   </head>
